# meta_learing_mvp

./: LICENCE  README.md  cli.py  cspell.json  debug_openml.py  debug_openml_enhanced.py  pyproject.toml  test_fix.py  test_task_2.py  verify_website_vs_api.py
.devcontainer/: Dockerfile  devcontainer.json
app/: app.py  logger_config.py
app/config/: config.py  openMLConfig.json
app/database/: __init__.py  connection.py  models.py  service.py
app/services/: __init__.py  console_protocol.py  knowledge_builder_doc.md  knowledge_builder_service.py  lobster_service.py  open_ml_service.py
app/utils/: utils.py
data/: knowledge_base.db  knowledge_base_pa_first_draft.db
scripts/: format.sh  install-packages.sh  lint.sh  setup.sh
tests/: conftest.py  test_database.py
tests/app/: test_api.py
tests/app/services/: __init__.py  openml_service.py
tests/database/: test_database.py
tests/utils/: test_utils.py
