[project]
name = "meta_learning_mvp"
version = "0.1.0"
description = "This is a mvp for meta learning for ensembles using latent space"
authors = [
    {name = "Leon Rieger"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openml (>=0.15.1,<0.16.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "click (>=8.1.0,<9.0.0)",
    "rich (>=13.0.0,<14.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)"
]

[project.scripts]
meta-learning-cli = "app.app:main"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
pytest = "^8.3.5"